Changelog for GEMC
==================

5/23/16
 - better comments for electronic noise routines

5/19/16
 - speeding up sensitive detector by not looking up vector<identifier>
 - added pure virtual function vector<MHit*> electronicNoise() to return a vector
   of hits coming from electronic noise.
   Each hit process routine must implement this function to provide electronic noise.
   The user can loop over all possible detector elements::

    vector<MHit*> noiseHits;

    // first, identify the cells that would have electronic noise
    // for each cell calculate the probability of a noise hit of energy e
    // then instantiate hit with energy E, time T, identifier IDF:
    //
    // MHit* thisNoiseHit = new MHit(E, T, IDF, pid);

    // push to noiseHits collection:
    // noiseHits.push_back(thisNoiseHit)

    return noiseHits;

 - The electronic noise hits are then added to the normal geant4 hits. Each process routine
   will have them available in the output.

5/17/16
 - added positronNuclear to processs catalogue

5/16/16
 - defaults to hit definitions if file is not found
 - added kaon0LInelastic process catalogue - re-ordered to put kaons together
 - option REMOVESENSITIVITY to remove a volume sensitivity::

    Usage: -REMOVESENSITIVITY="volumename1, volumename2, ..."

5/13/16
 - added low em physics process (code LEM)
 - added em Livermore with polarisation physics process (code LVP)
 - added option "CHANGEVOLUMEMATERIALTO" to change a volume material::

    Usage: -CHANGEVOLUMEMATERIALTO="volume, new material"

 - added option "SWITCH_MATERIALTO" to change a material into another::

     Usage: -SWITCH_MATERIALTO="oldmaterial, newmaterial"

 - Both CHANGEVOLUMEMATERIALTO and SWITCH_MATERIALTO can be repeated.

5/12/16
 - luminosity raster:
	- fixed bug that affect radius of distribution
	- number of total particles will match the LUMI option (last bunch may have more particles)
	- distribution has uniform density

5/11/16